# Ai-Boss

./: README.md
ai-bos-platform/: AI-BOSS note.txt  README.md  run_example.py
ai-bos-platform/backend/: pyproject.toml  requirements.txt
ai-bos-platform/backend/agents/: admin_agents.py  creative_agents.py  growth_agents.py  research_agent.py  service_agents.py  strategy_agents.py
ai-bos-platform/backend/api/: main.py
ai-bos-platform/backend/crews/: creative_crew.py  growth_crew.py  strategy_crew.py
ai-bos-platform/backend/schemas/: business_schemas.py
ai-bos-platform/backend/storage/: json_storage.py
ai-bos-platform/backend/storage/data/: growth_crew_20260317_150849.json  growth_crew_20260317_151322.json  growth_crew_20260317_153122.json  growth_crew_20260317_155537.json  growth_crew_20260317_160652.json  strategy_crew_20260312_140902.json  strategy_crew_20260312_141157.json
ai-bos-platform/backend/tasks/: core_tasks.py  creative_tasks.py  ops_tasks.py  strategic_tasks.py
ai-bos-platform/backend/tools/: media_tools.py
ai-bos-platform/backend/workflows/: lead_generation_workflow.py
